# django-change-list

./: .gitignore  MANIFEST.in  README.md  manage.py  requirements.in  requirements.txt  setup.cfg  setup.py
django_change_list/: __init__.py  apps.py  consts.py  forms.py  models.py  urls.py  utils.py  views.py
django_change_list/migrations/: 0001_initial.py  0002_auto_20200523_1856.py
django_change_list/static/django_change_list/css/: change_views.css
django_change_list/templates/django_change_list/: base.html  changes.html  changes_form.html  changes_list.html  changes_vuejs.html
django_change_list/templatetags/: changes_tags.py
test_app_django_changes/: settings.py  urls.py  wsgi.py
