[metadata]
name = django-change-list
version = 1.0.1
description = A standalone app for listing and exporting all Django Changes, filtered by release and type
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mcldev/django-change-list
author = Michael Carder Ltd
author_email = codetoolbox@michaelcarder.co.uk
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
